--- a/css/styles.css
+++ b/css/styles.css
@@ -583,6 +583,12 @@ progress {
   margin-bottom: 1rem;
   font-size: 1.25rem;
 }
+
+.blockquote p{
+  font-size: 0.8rem;
+  padding-left: 2rem;
+}
+
 .blockquote > :last-child {
   margin-bottom: 0;
 }
@@ -10986,7 +10992,7 @@ textarea.form-control-lg {
   }
 }
 body {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 hr {
